Initial release readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@civilocity/cdf-ng-media",
+  "name": "@titoagudelo/cdf-ng-media",
   "version": "1.2.4",
   "author": "Tom Schreck <tom_schreck@solutiaconsulting.com> (http://solutiaconsulting.com)",
   "homepage": "https://github.com/TitoAgudelo/cdf-ng-media#readme",
