--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@titoagudelo/cdf-ng-media",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "author": "Tom Schreck <tom_schreck@solutiaconsulting.com> (http://solutiaconsulting.com)",
   "homepage": "https://github.com/TitoAgudelo/cdf-ng-media#readme",
   "license": "MIT",
@@ -41,7 +41,7 @@
     "mocha": "^3.2.0",
     "@angular/common": "^2.4.7",
     "@angular/compiler": "^2.4.7",
-    "@angular/cli": "^1.0.0-beta.31",
+    "@angular/cli": "1.0.0-rc.1",
     "@angular/compiler-cli": "^2.4.7",
     "@angular/core": "^2.4.7",
     "@angular/forms": "^2.4.7",
