--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "mocha": "^3.2.0",
     "@angular/common": "^2.4.7",
     "@angular/compiler": "^2.4.7",
-    "@angular/cli": "1.0.0-rc.1",
+    "@angular/cli": "^1.0.0-beta.31",
     "@angular/compiler-cli": "^2.4.7",
     "@angular/core": "^2.4.7",
     "@angular/forms": "^2.4.7",
