--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -1,5 +1,5 @@
 {
-    "compilerOptions": 
+    "compilerOptions":
     {
         "module": "commonjs",
         "moduleResolution": "node",
@@ -10,11 +10,13 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "removeComments": false,
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "outDir": "./lib",
         "stripInternal": true,
         "skipLibCheck": true,
-        "types": ["node"]             
+        "types" : ["node", "lodash", "express"],
+        "preserveConstEnums": true,
+        "strictNullChecks": true
     },
     "files": [
         "./src/index.ts",
@@ -22,5 +24,10 @@
     ],
     "exclude": [
         "node_modules"
-    ]
+    ],
+    "angularCompilerOptions": {
+        "genDir": "./lib",
+        "skipMetadataEmit" : false,
+        "strictMetadataEmit": true
+    }
 }
