--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -10,13 +10,15 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "removeComments": false,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "outDir": "./lib",
         "stripInternal": true,
         "skipLibCheck": true,
-        "types" : ["node", "lodash", "express"],
-        "preserveConstEnums": true,
-        "strictNullChecks": true
+        "types": ["node"]
+    },
+    "angularCompilerOptions": {
+        "skipMetadataEmit" : false,
+        "strictMetadataEmit": true
     },
     "files": [
         "./src/index.ts",
@@ -24,10 +26,5 @@
     ],
     "exclude": [
         "node_modules"
-    ],
-    "angularCompilerOptions": {
-        "genDir": "./lib",
-        "skipMetadataEmit" : false,
-        "strictMetadataEmit": true
-    }
+    ]
 }
