--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@titoagudelo/cdf-ng-media",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "author": "Tom Schreck <tom_schreck@solutiaconsulting.com> (http://solutiaconsulting.com)",
   "homepage": "https://github.com/TitoAgudelo/cdf-ng-media#readme",
   "license": "MIT",
@@ -14,7 +14,7 @@
     "e2e": "protractor",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "prepublish": "tsc -p ./tsconfig.publish.json",
+    "prepublish": "node_modules/.bin/ngc -p tsconfig.publish.json",
     "clean:aot": "rimraf aot/*",
     "clean:lib": "rimraf lib/*",
     "clean:lib-temp": "rimraf lib-temp/*",
@@ -22,7 +22,7 @@
     "copy:assets": "cpx \"src/assets/**/*\" lib/assets",
     "copy:src": "cpx \"lib-temp/src/**/*\" lib",
     "copy": "npm run copy:assets && npm run copy:src",
-    "ngc": "node_modules/.bin/ngc -p tsconfig.publish.json",
+    "ngc": "node_modules/.bin/ngc -p tsconfig-aot.json",
     "b": "npm run clean && npm run ngc && npm run copy && npm run clean:lib-temp"
   },
   "repository": {
